AbhiReddy_COE379L_Project1_Notebook.ipynb

--- a/COE379L_Project1_Notebook-2.ipynb
+++ b/COE379L_Project1_Notebook-2.ipynb
@@ -13,14 +13,10 @@
         "\n",
         "**Date:** 07/10/2025\n",
         "\n",
-        "> **Important:** The course policy allows using AI tools for coding but **not** for the Part 3 report.  \n",
-        "> Please complete and include the provided `Use_of_AI.md` and reference entries like `[1]` in code comments wherever used.\n",
-        "\n",
         "This notebook contains:\n",
-        "- **Part 1 (EDA & Preprocessing)**: shape/size, dtypes, duplicates, missingness, univariate plots, conversion to numeric/categorical, one-hot encoding.  \n",
-        "- **Part 2 (Modeling)**: split, KNN baseline, KNN GridSearchCV, and a linear classifier, with reports (accuracy, precision, recall, f1).\n",
+        "- **Part 1**: Performing exploratory data analysis.  \n",
+        "- **Part 2**: Fitting Classification models on the data to predict the outcome type.\n",
         "\n",
-        "**Dataset note:** Put your CSV path in `DATA_PATH` below. The dataset should match the columns listed in the assignment."
       ]
     },
     {
